--- a/TestMaker.Administrator/src/app/shareds/components/layout/layout.component.scss
+++ b/TestMaker.Administrator/src/app/shareds/components/layout/layout.component.scss
@@ -10,6 +10,31 @@
         width: 280px;
         border-right: solid 1px #333;
         box-sizing: border-box;
+        ul {
+            margin: 0px;
+            list-style: none;
+            padding: 0px;
+            p.h2 {
+                font-size: 24px;
+                line-height: 24px;
+                margin: 12px 16px 12px 16px;
+            }
+            ul {
+                li {
+                    a { 
+                        padding-left: 24px;
+                    }
+                }
+            }
+            a {
+                border: none;
+                width: 100%;
+                text-align: left;
+                border-radius: 0px;
+                font-weight: initial;
+            }
+            
+        }
     }
     .content {
         float: left;
