--- a/TestMaker.Administrator/src/app/shareds/components/form/form-control/form-control.component.scss
+++ b/TestMaker.Administrator/src/app/shareds/components/form/form-control/form-control.component.scss
@@ -1,3 +1,9 @@
 mat-form-field {
     display: block;
 }
+
+mat-radio-group {
+    mat-radio-button:not(:last-child) {
+        margin-right: 8px;
+    }
+}
