--- a/TestMaker.Administrator/src/app/shareds/components/table/table.component.html
+++ b/TestMaker.Administrator/src/app/shareds/components/table/table.component.html
@@ -8,14 +8,17 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       <ng-container *ngFor="let column of config.columns">
         <ng-container [matColumnDef]="column.property">
-          <th mat-header-cell *matHeaderCellDef> {{column.title}} </th>
+          <th mat-header-cell *matHeaderCellDef [ngStyle]="{'width': column.width}"> {{column.title}} </th>
           <td mat-cell *matCellDef="let element">
             <span *ngIf="column.text && !column.link && !column.event">
-              {{ fillValue(column.text, element) }}
+              <app-title [title]="fillValue(column.text, element)"></app-title>
             </span>
             <a *ngIf="column.text && column.link && column.link.url && !column.event" 
               [routerLink]="[ fillValue(column.link.url, element) ]" [queryParams]="column.link.queryParams" >
-              {{ fillValue(column.text, element) }}
+              <app-title [title]="fillValue(column.text, element)"></app-title>
+            </a>
+            <a style="cursor: pointer" *ngIf="column.text && !column.link && column.event" (click)="column.event(element, $event)" >
+              <app-title [title]="fillValue(column.text, element)"></app-title>
             </a>
           </td>
         </ng-container>
@@ -25,31 +28,16 @@
           <th *ngFor="let column of config.columns">{{column.title}}</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of source">
-          <td *ngFor="let column of config.columns">
-            <span *ngIf="column.text && !column.link && !column.event">
-              {{ fillValue(column.text, item) }}
-            </span>
-            <a *ngIf="column.text && column.link && column.link.url && !column.event" 
-              [routerLink]="[ fillValue(column.link.url, item) ]" [queryParams]="column.link.queryParams" >
-              {{ fillValue(column.text, item) }}
-            </a>
-          </td>
-        </tr>
-      </tbody>
     </table>
   </mat-card-content>
   <mat-card-actions class="buttons-right">
     <ng-container *ngIf="config.buttons" >
       <ng-container *ngFor="let button of config.buttons">
-        <a mat-stroked-button *ngIf="button && button.link" [routerLink]="[button.link.url]" [queryParams]="button.link.queryParams" 
-            class="btn btn-outline-dark">
-          {{ button.title || 'Thêm mới' }}
+        <a mat-stroked-button *ngIf="button && button.link" [routerLink]="[button.link.url]" [queryParams]="button.link.queryParams" class="btn btn-outline-dark">
+            <app-title [title]="button.title"></app-title>
         </a>
-        <a mat-stroked-button *ngIf="button && button.event" (click)="button.event($event)"
-            class="btn btn-outline-dark">
-          {{ button.title }}
+        <a mat-stroked-button *ngIf="button && button.event" (click)="button.event($event)" class="btn btn-outline-dark">
+            <app-title [title]="button.title"></app-title>
         </a>
       </ng-container>
     </ng-container>
