--- a/TestMaker.Administrator/src/app/shareds/components/layout/layout.component.html
+++ b/TestMaker.Administrator/src/app/shareds/components/layout/layout.component.html
@@ -21,6 +21,17 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <p class="h2">Tài khoản</p>
+                    <ul>
+                        <li>
+                            <a mat-stroked-button class="btn btn-outline-dark" routerLink="/user/user-list" routerLinkActive="active" ariaCurrentWhenActive="page">Tài khoản</a>
+                        </li>
+                        <li>
+                            <a mat-stroked-button class="btn btn-outline-dark" routerLink="/user/role-list" routerLinkActive="active" ariaCurrentWhenActive="page">Quyền</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </div>
